[gd_scene load_steps=81 format=3 uid="uid://tbfk3kr6wutv"]

[ext_resource type="Material" uid="uid://dbxdw3tgowpgd" path="res://Materials/prototype_material_gray.tres" id="1_4ei0e"]
[ext_resource type="Texture2D" uid="uid://ox53rblp5gp6" path="res://Sprites/Prototype Textures/Grey.png" id="2_g6pl5"]
[ext_resource type="Script" path="res://Scripts/Camera.gd" id="2_go5qk"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="2_mxp76"]
[ext_resource type="AudioStream" uid="uid://c5a2qxgpgqv6v" path="res://Audio/BOING.mp3" id="3_4equq"]
[ext_resource type="ArrayMesh" uid="uid://duluovx42qrnt" path="res://Models/revolvermesh.tres" id="3_73xic"]
[ext_resource type="Texture2D" uid="uid://cmsbu2ber7gqi" path="res://Sprites/dancing_baby_spritesheet.png" id="4_3vq0y"]
[ext_resource type="Texture2D" uid="uid://djgcil4gdn817" path="res://Sprites/white_square.png" id="4_70w32"]
[ext_resource type="Script" path="res://Scripts/HUD.gd" id="6_prntk"]
[ext_resource type="PackedScene" uid="uid://bvdb2old8vavb" path="res://Prefabs/enemy_melee.tscn" id="9_4xayu"]
[ext_resource type="Texture2D" uid="uid://dajiqjalsaasr" path="res://Sprites/Prototype Textures/crosshair.png" id="9_s8t6t"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ib2r2"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_e1r3j"]
sky_material = SubResource("ProceduralSkyMaterial_ib2r2")

[sub_resource type="Environment" id="Environment_q8gbk"]
background_mode = 2
sky = SubResource("Sky_e1r3j")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="CapsuleMesh" id="CapsuleMesh_gk03l"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dbxfy"]

[sub_resource type="LabelSettings" id="LabelSettings_p4wuf"]
font_size = 86
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6pfd7"]
font_size = 86
font_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_e827j"]
atlas = ExtResource("4_3vq0y")
region = Rect2(0, 0, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_aeut5"]
atlas = ExtResource("4_3vq0y")
region = Rect2(650, 0, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_huhb4"]
atlas = ExtResource("4_3vq0y")
region = Rect2(1300, 0, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ij833"]
atlas = ExtResource("4_3vq0y")
region = Rect2(1950, 0, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_4p6qn"]
atlas = ExtResource("4_3vq0y")
region = Rect2(2600, 0, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd55a"]
atlas = ExtResource("4_3vq0y")
region = Rect2(0, 400, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh6l7"]
atlas = ExtResource("4_3vq0y")
region = Rect2(650, 400, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_82ogl"]
atlas = ExtResource("4_3vq0y")
region = Rect2(1300, 400, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_wecw6"]
atlas = ExtResource("4_3vq0y")
region = Rect2(1950, 400, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_64bm4"]
atlas = ExtResource("4_3vq0y")
region = Rect2(2600, 400, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_g511h"]
atlas = ExtResource("4_3vq0y")
region = Rect2(0, 800, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_hs21s"]
atlas = ExtResource("4_3vq0y")
region = Rect2(650, 800, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_txxdj"]
atlas = ExtResource("4_3vq0y")
region = Rect2(1300, 800, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd6wu"]
atlas = ExtResource("4_3vq0y")
region = Rect2(1950, 800, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_36bbg"]
atlas = ExtResource("4_3vq0y")
region = Rect2(2600, 800, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4uma"]
atlas = ExtResource("4_3vq0y")
region = Rect2(0, 1200, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_5481e"]
atlas = ExtResource("4_3vq0y")
region = Rect2(650, 1200, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqusu"]
atlas = ExtResource("4_3vq0y")
region = Rect2(1300, 1200, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_kki2u"]
atlas = ExtResource("4_3vq0y")
region = Rect2(1950, 1200, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_65xa1"]
atlas = ExtResource("4_3vq0y")
region = Rect2(2600, 1200, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6l0y"]
atlas = ExtResource("4_3vq0y")
region = Rect2(0, 1600, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdg3c"]
atlas = ExtResource("4_3vq0y")
region = Rect2(650, 1600, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdwee"]
atlas = ExtResource("4_3vq0y")
region = Rect2(1300, 1600, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_exg1a"]
atlas = ExtResource("4_3vq0y")
region = Rect2(1950, 1600, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_2y3lo"]
atlas = ExtResource("4_3vq0y")
region = Rect2(2600, 1600, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_qh8qb"]
atlas = ExtResource("4_3vq0y")
region = Rect2(0, 2000, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bn2s"]
atlas = ExtResource("4_3vq0y")
region = Rect2(650, 2000, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nkje"]
atlas = ExtResource("4_3vq0y")
region = Rect2(1300, 2000, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnl31"]
atlas = ExtResource("4_3vq0y")
region = Rect2(1950, 2000, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_3smun"]
atlas = ExtResource("4_3vq0y")
region = Rect2(2600, 2000, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_qq302"]
atlas = ExtResource("4_3vq0y")
region = Rect2(0, 2400, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmmey"]
atlas = ExtResource("4_3vq0y")
region = Rect2(650, 2400, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_exqco"]
atlas = ExtResource("4_3vq0y")
region = Rect2(1300, 2400, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdosi"]
atlas = ExtResource("4_3vq0y")
region = Rect2(1950, 2400, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_riyma"]
atlas = ExtResource("4_3vq0y")
region = Rect2(2600, 2400, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_837pn"]
atlas = ExtResource("4_3vq0y")
region = Rect2(0, 2800, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_lumua"]
atlas = ExtResource("4_3vq0y")
region = Rect2(650, 2800, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_21mp8"]
atlas = ExtResource("4_3vq0y")
region = Rect2(1300, 2800, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxy1f"]
atlas = ExtResource("4_3vq0y")
region = Rect2(1950, 2800, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8cl0"]
atlas = ExtResource("4_3vq0y")
region = Rect2(2600, 2800, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4w3k"]
atlas = ExtResource("4_3vq0y")
region = Rect2(0, 3200, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnobd"]
atlas = ExtResource("4_3vq0y")
region = Rect2(650, 3200, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pgpj"]
atlas = ExtResource("4_3vq0y")
region = Rect2(1300, 3200, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_667o4"]
atlas = ExtResource("4_3vq0y")
region = Rect2(1950, 3200, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmwjr"]
atlas = ExtResource("4_3vq0y")
region = Rect2(2600, 3200, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_n30oh"]
atlas = ExtResource("4_3vq0y")
region = Rect2(0, 3600, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_jefdd"]
atlas = ExtResource("4_3vq0y")
region = Rect2(650, 3600, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_fylhs"]
atlas = ExtResource("4_3vq0y")
region = Rect2(1300, 3600, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_qimhn"]
atlas = ExtResource("4_3vq0y")
region = Rect2(1950, 3600, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8eqq"]
atlas = ExtResource("4_3vq0y")
region = Rect2(2600, 3600, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_53yrc"]
atlas = ExtResource("4_3vq0y")
region = Rect2(0, 4000, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0m05"]
atlas = ExtResource("4_3vq0y")
region = Rect2(650, 4000, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cxi3"]
atlas = ExtResource("4_3vq0y")
region = Rect2(1300, 4000, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ok3oe"]
atlas = ExtResource("4_3vq0y")
region = Rect2(1950, 4000, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2rqr"]
atlas = ExtResource("4_3vq0y")
region = Rect2(2600, 4000, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_1oefu"]
atlas = ExtResource("4_3vq0y")
region = Rect2(0, 4400, 650, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_it04t"]
atlas = ExtResource("4_3vq0y")
region = Rect2(650, 4400, 650, 400)

[sub_resource type="SpriteFrames" id="SpriteFrames_n1leo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e827j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aeut5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_huhb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ij833")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4p6qn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd55a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh6l7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82ogl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wecw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64bm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g511h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hs21s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txxdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd6wu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36bbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4uma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5481e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqusu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kki2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65xa1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6l0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdg3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdwee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exg1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2y3lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qh8qb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bn2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nkje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnl31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qq302")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmmey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exqco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdosi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_riyma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_837pn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lumua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21mp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxy1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8cl0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4w3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnobd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pgpj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_667o4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmwjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n30oh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jefdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fylhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qimhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8eqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53yrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0m05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cxi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ok3oe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2rqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1oefu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_it04t")
}],
"loop": true,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_xuhxf"]
line_spacing = 3.81
font_size = 146
font_color = Color(0, 0, 0, 1)

[sub_resource type="NavigationMesh" id="NavigationMesh_5bfid"]
vertices = PackedVector3Array(2.75, -0.720195, -9.75, 4.75, -0.720195, -9.75, 4.75, -0.720195, -48.25, 2.25, -0.720195, -8.75, 2.75, -0.720195, -9.75, 4.75, -0.720195, -48.25, -48.25, -0.720195, -48.25, -48.25, -0.720195, -8.75, 4.75, -0.720195, -9.75, 7, -0.720195, -9.75, 7, -0.720195, -48.25, 4.75, -0.720195, -48.25, 7, -0.720195, -48.25, 7, -0.720195, -9.75, 9, -0.720195, -9.75, 9.75, -0.720195, -9, 9.75, -0.720195, -7.5, 48.5, -0.720195, -7.75, 7, -0.720195, -48.25, 9, -0.720195, -9.75, 9.75, -0.720195, -9, 48.5, -0.720195, -7.75, 48.5, -0.720195, -48.25, 2.75, -0.470195, -5, 7.75, 3.27981, -5, 7.75, 3.27981, -7.75, 2.75, -0.470195, -7.75, 2.75, -0.470195, -7.75, 2.25, -0.720195, -8.75, -48.25, -0.720195, -8.75, -48.25, -0.720195, -4, 2.25, -0.720195, -4, 2.75, -0.470195, -5, -6, -6.72019, -7.75, -6, -6.72019, -5, -1.5, -3.47019, -5, -1.5, -3.47019, -7.75, 9.75, -0.720195, -7.5, 9.75, -0.720195, -5.25, 48.5, -0.720195, -5, 48.5, -0.720195, -7.75, 6, -0.720195, -7.5, 6, -0.720195, -5.25, 7.5, -0.720195, -5.25, 7.5, -0.720195, -7.5, 48.5, -0.720195, -5, 9.75, -0.720195, -5.25, 9.75, -0.720195, -3.75, 48.5, -0.720195, -5, 9.75, -0.720195, -3.75, 9, -0.720195, -3, 7, -0.720195, 48.5, 48.5, -0.720195, 48.5, 9, -0.720195, -3, 7, -0.720195, -3, 7, -0.720195, 48.5, 2.75, -0.720195, -3, 2.25, -0.720195, -4, -48.25, -0.720195, -4, -48.25, -0.720195, 48.5, 4.75, -0.720195, 48.5, 4.75, -0.720195, 48.5, 4.75, -0.720195, -3, 2.75, -0.720195, -3, 4.75, -0.720195, 48.5, 7, -0.720195, 48.5, 7, -0.720195, -3, 4.75, -0.720195, -3)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(4, 3, 5), PackedInt32Array(5, 3, 7), PackedInt32Array(5, 7, 6), PackedInt32Array(11, 10, 8), PackedInt32Array(8, 10, 9), PackedInt32Array(14, 13, 12), PackedInt32Array(17, 16, 15), PackedInt32Array(19, 18, 20), PackedInt32Array(20, 18, 22), PackedInt32Array(20, 22, 21), PackedInt32Array(26, 25, 23), PackedInt32Array(23, 25, 24), PackedInt32Array(32, 31, 27), PackedInt32Array(27, 31, 28), PackedInt32Array(28, 31, 30), PackedInt32Array(28, 30, 29), PackedInt32Array(36, 35, 33), PackedInt32Array(33, 35, 34), PackedInt32Array(37, 40, 38), PackedInt32Array(38, 40, 39), PackedInt32Array(44, 43, 41), PackedInt32Array(41, 43, 42), PackedInt32Array(47, 46, 45), PackedInt32Array(49, 48, 50), PackedInt32Array(50, 48, 52), PackedInt32Array(50, 52, 51), PackedInt32Array(55, 54, 53), PackedInt32Array(57, 56, 58), PackedInt32Array(58, 56, 59), PackedInt32Array(59, 56, 60), PackedInt32Array(63, 62, 61), PackedInt32Array(67, 66, 64), PackedInt32Array(64, 66, 65)]
agent_radius = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_c8bcx"]
albedo_texture = ExtResource("2_g6pl5")
uv1_scale = Vector3(93.22, 9, 92.965)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hppit"]
albedo_texture = ExtResource("2_g6pl5")
uv1_scale = Vector3(3.67, 129.755, 5.485)

[node name="world" type="Node3D"]

[node name="environment" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="environment"]
environment = SubResource("Environment_q8gbk")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="environment"]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="level" type="Node3D" parent="."]

[node name="Player" type="CharacterBody3D" parent="level"]
process_mode = 3
script = ExtResource("2_mxp76")
cam_rotation_amount = 0.08

[node name="BEAN_Player" type="MeshInstance3D" parent="level/Player"]
mesh = SubResource("CapsuleMesh_gk03l")
skeleton = NodePath("../..")

[node name="COLLISION_Player" type="CollisionShape3D" parent="level/Player"]
shape = SubResource("CapsuleShape3D_dbxfy")

[node name="HEAD_Player" type="Node3D" parent="level/Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.135, 0)

[node name="CAMERA_Player" type="Camera3D" parent="level/Player/HEAD_Player"]
script = ExtResource("2_go5qk")
period = 0.1
magnitude = 0.04

[node name="WeaponHolder" type="Node3D" parent="level/Player/HEAD_Player"]

[node name="Revolver" type="Node3D" parent="level/Player/HEAD_Player/WeaponHolder"]
transform = Transform3D(-0.000706831, 0, -0.0449944, 0, 0.045, 0, 0.0449944, 0, -0.000706831, 0.429617, -0.461155, -0.923183)

[node name="defaultMaterial" type="MeshInstance3D" parent="level/Player/HEAD_Player/WeaponHolder/Revolver"]
transform = Transform3D(1, 0, 0, 0, 1, -4.37114e-08, 0, 4.37114e-08, 1, 0, 0, 0)
mesh = ExtResource("3_73xic")
skeleton = NodePath("")

[node name="Bullet_Spawn" type="Node3D" parent="level/Player/HEAD_Player/WeaponHolder/Revolver"]
transform = Transform3D(0.999999, 0, 2.23517e-07, 0, 1, 0, -2.23517e-07, 0, 0.999999, -11.4613, 5.12174, -0.26275)

[node name="AimRay" type="RayCast3D" parent="level/Player/HEAD_Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.684579)
target_position = Vector3(0, 0, -50)

[node name="AimRayEnd" type="Node3D" parent="level/Player/HEAD_Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -50)

[node name="Gun_Animator" type="AnimationPlayer" parent="level/Player/HEAD_Player"]
root_node = NodePath("../..")

[node name="AUDIO_Player" type="AudioStreamPlayer3D" parent="level/Player"]
stream = ExtResource("3_4equq")

[node name="HUD" type="Control" parent="level/Player"]
layout_mode = 3
anchors_preset = 0
offset_top = 1.0
offset_right = 1923.0
offset_bottom = 1073.0
mouse_filter = 1
script = ExtResource("6_prntk")

[node name="Crosshair" type="TextureRect" parent="level/Player/HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.53, 0.53)
texture = ExtResource("9_s8t6t")

[node name="HUD_NanobotSlider" type="TextureProgressBar" parent="level/Player/HUD"]
layout_mode = 0
offset_left = 47.0
offset_top = 813.0
offset_right = 1381.0
offset_bottom = 961.0
scale = Vector2(0.54, 0.54)
max_value = 500.0
value = 77.0
nine_patch_stretch = true
texture_under = ExtResource("4_70w32")
texture_progress = ExtResource("4_70w32")
tint_progress = Color(0.47788, 0.47788, 0.47788, 1)

[node name="HUD_NanobotCount" type="Label" parent="level/Player/HUD/HUD_NanobotSlider"]
layout_mode = 0
offset_left = 33.0
offset_right = 650.0
offset_bottom = 146.0
text = "Nanobots:"
label_settings = SubResource("LabelSettings_p4wuf")
vertical_alignment = 1

[node name="HUD_NanobotRegenRate" type="Label" parent="level/Player/HUD/HUD_NanobotSlider"]
layout_mode = 0
offset_left = 1050.0
offset_right = 1667.0
offset_bottom = 146.0
label_settings = SubResource("LabelSettings_p4wuf")
vertical_alignment = 1

[node name="HUD_VOIDEnergySlider" type="TextureProgressBar" parent="level/Player/HUD"]
layout_mode = 0
offset_left = 47.0
offset_top = 917.0
offset_right = 1381.0
offset_bottom = 1065.0
scale = Vector2(0.54, 0.54)
max_value = 250.0
value = 250.0
nine_patch_stretch = true
texture_under = ExtResource("4_70w32")
texture_progress = ExtResource("4_70w32")
tint_progress = Color(0.490196, 0, 0.945098, 1)

[node name="HUD_VOIDEnergyCount" type="Label" parent="level/Player/HUD/HUD_VOIDEnergySlider"]
layout_mode = 0
offset_left = 37.037
offset_right = 654.037
offset_bottom = 146.0
text = "Void Energy:"
label_settings = SubResource("LabelSettings_6pfd7")
vertical_alignment = 1

[node name="HUD_SECRET_Goofy" type="ColorRect" parent="level/Player/HUD"]
visible = false
layout_mode = 0
offset_right = 1894.0
offset_bottom = 1050.0

[node name="HUD_SECRET_Hampter" type="Button" parent="level/Player/HUD/HUD_SECRET_Goofy"]
layout_mode = 0
offset_left = 501.0
offset_top = 427.0
offset_right = 951.0
offset_bottom = 601.0
theme_override_font_sizes/font_size = 131
text = "HAMPTER"

[node name="HUD_SECRET_ATRAIN" type="Button" parent="level/Player/HUD/HUD_SECRET_Goofy"]
layout_mode = 0
offset_left = 1130.0
offset_top = 175.0
offset_right = 1756.0
offset_bottom = 363.0
theme_override_font_sizes/font_size = 131
text = "A-TRAIN"

[node name="HUD_SECRET_BOING" type="Button" parent="level/Player/HUD/HUD_SECRET_Goofy"]
layout_mode = 0
offset_left = 99.0
offset_top = 124.0
offset_right = 725.0
offset_bottom = 312.0
theme_override_font_sizes/font_size = 131
text = "BOING"

[node name="Death_Screen" type="Control" parent="level/Player/HUD"]
process_mode = 2
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DANCING_Baby" type="AnimatedSprite2D" parent="level/Player/HUD/Death_Screen"]
position = Vector2(964, 655)
scale = Vector2(2.4925, 2.4925)
sprite_frames = SubResource("SpriteFrames_n1leo")
autoplay = "default"
frame_progress = 0.769873

[node name="DEATH_Title" type="Label" parent="level/Player/HUD/Death_Screen"]
layout_mode = 0
offset_left = 634.0
offset_top = -11.0
offset_right = 1301.0
offset_bottom = 189.0
text = "You Died "
label_settings = SubResource("LabelSettings_xuhxf")

[node name="DEATH_Respawn" type="Button" parent="level/Player/HUD/Death_Screen"]
layout_mode = 0
offset_left = 641.0
offset_top = 862.0
offset_right = 1267.0
offset_bottom = 1050.0
theme_override_font_sizes/font_size = 131
text = "Respawn"

[node name="Enemy_Melee" parent="level" instance=ExtResource("9_4xayu")]

[node name="Nav_Region" type="NavigationRegion3D" parent="level"]
navigation_mesh = SubResource("NavigationMesh_5bfid")

[node name="floor" type="CSGBox3D" parent="level/Nav_Region"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.41049, 0)
use_collision = true
collision_layer = 7
collision_mask = 7
size = Vector3(100, 0.54, 100)
material = ExtResource("1_4ei0e")

[node name="walls" type="Node3D" parent="level/Nav_Region"]

[node name="wall1" type="CSGBox3D" parent="level/Nav_Region/walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.02, 3.55, 50)
use_collision = true
size = Vector3(100, 10, 1)
material = SubResource("StandardMaterial3D_c8bcx")

[node name="wall2" type="CSGBox3D" parent="level/Nav_Region/walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.02, 3.55, -50)
use_collision = true
size = Vector3(100, 10, 1)
material = SubResource("StandardMaterial3D_c8bcx")

[node name="wall3" type="CSGBox3D" parent="level/Nav_Region/walls"]
transform = Transform3D(-4.37114e-08, 3.48787e-16, 1, 3.48787e-16, 1, -3.48787e-16, -1, 3.48787e-16, -4.37114e-08, -50, 3.55, 2.08165e-12)
use_collision = true
size = Vector3(100, 10, 1)
material = SubResource("StandardMaterial3D_c8bcx")

[node name="wall4" type="CSGBox3D" parent="level/Nav_Region/walls"]
transform = Transform3D(-4.37114e-08, 3.48787e-16, 1, 3.48787e-16, 1, -3.48787e-16, -1, 3.48787e-16, -4.37114e-08, 50, 3.55, 2.08165e-12)
use_collision = true
size = Vector3(100, 10, 1)
material = SubResource("StandardMaterial3D_c8bcx")

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="level/Nav_Region"]
transform = Transform3D(4.49, 0, 0, 0, 4.49, 0, 0, 0, 4.49, 8.63486, -1.14517, -4.17422)
use_collision = true
polygon = PackedVector2Array(0, 0, 0, 1, -3.45946, -1.52005, 1, 0)
material = SubResource("StandardMaterial3D_hppit")

[node name="Enemy_Melee2" parent="level" instance=ExtResource("9_4xayu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.02066, -0.242219, 4.71318)

[connection signal="pressed" from="level/Player/HUD/Death_Screen/DEATH_Respawn" to="level/Player" method="_reload_scene"]
